<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#CCCCCC"
            android:textStyle="bold"
            android:text="Personal Info"
            />

        <EditText
            android:id="@+id/edittext_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="first name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            />

        <EditText
            android:id="@+id/edittext_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="last name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#CCCCCC"
            android:textStyle="bold"
            android:text="Address"
            />

        <EditText
            android:id="@+id/edittext_address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="address 1"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            />

        <EditText
            android:id="@+id/edittext_address_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="address 2"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            />

        <EditText
            android:id="@+id/edittext_address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="city"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:singleLine="true"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            />

        <EditText
            android:id="@+id/edittext_address_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="state"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:singleLine="true"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            />

        <EditText
            android:id="@+id/edittext_address_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="zip"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp"
            />

        <Button
            android:id="@+id/button_next"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next"
            android:textStyle="bold"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            />

    </LinearLayout>
</ScrollView>