...
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="title_signup">Sign Up</string>
    <string name="input_error_required">Required.</string>
    <string name="dialog_select_interests_title">Select Interests</string>
    <string name="dialog_select_interests_body">Please select at least 1 interest.</string>
    <string name="button_ok">Ok</string>

    <!-- Overview -->
    <string name="label_transactions">Transactions</string>
    <string name="label_monthly_spending">Monthly Spending</string>
    <string name="label_credit_card_analysis">Credit Card Analysis</string>
...
